--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,19 @@
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background-color: #f1f1f1;
+    color: #333;
+    margin: 0;
+    padding: 0;
+}
+nav {
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
 #mbu {
     margin-left: 10px;
     text-transform: capitalize;
