--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,34 @@ nav {
     align-items: center;
     padding: 1rem;
 }
+.logo {
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    background-color: #ff6600;
+    color: #fff;
+    border-radius: 8px;
+}
+ul {
+    text-align: right;
+    list-style: circle;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+li {
+    margin-right: 1rem;
+}
+.navbar-item {
+    text-decoration: none;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: background-color 0.2s ease;
+}
+.navbar-item:hover {
+    background-color: #ff6600;
+}
 #mbu {
     margin-left: 10px;
     text-transform: capitalize;
