--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,23 +14,12 @@ nav {
     align-items: center;
     padding: 1rem;
 }
-.logo {
-    font-size: 2rem;
-    font-weight: bold;
-    padding: 0.5rem 1rem;
-    background-color: #ff6600;
-    color: #fff;
-    border-radius: 8px;
-}
 ul {
     text-align: right;
     list-style: circle;
     display: flex;
     margin: 0;
     padding: 0;
-}
-li {
-    margin-right: 1rem;
 }
 .navbar-item {
     text-decoration: none;
@@ -45,23 +34,6 @@ li {
 #mbu {
     margin-left: 10px;
     text-transform: capitalize;
-}
-@media screen and (max-width:768px) {
-    nav {
-        flex-direction: column;
-        align-items: center;
-    }
-    .logo {
-        margin-bottom: 1rem;
-    }
-    ul {
-        flex-direction: column;
-        align-items: center;
-    }
-    li {
-        margin: 0.5rem 0;
-    }
-    
 }
 .welcome {
     background-color: #fff;
@@ -119,4 +91,81 @@ li {
     cursor: pointer;
     outline: none;
     color: #ff6600;
+}
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 0%;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo {
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 0rem 0rem;
+    background-color: #ff6600;
+    color: #fff;
+    clip-path: polygon(0% 0%, 420% 40%, 10% 100%, 0% 90%);
+}
+nav li {
+    margin-right: 1rem;
+}
+nav a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: background-color 0.2s ease;
+}
+nav a:hover {
+    background-color: #ff6600;
+}
+header .logo {
+    font-size: 2rem;
+    font-weight: bold;
+    font-family: 'Pacifico', cursive;
+}
+header ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0;
+    padding-left: 0;
+}
+header li {
+    margin-right: 1rem;
+    position: relative;
+}
+header a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s ease;
+}
+header a:hover {
+    border-bottom: 2px solid #fff;
+}
+header a:active {
+    border-bottom: 2px solid #fff;
+}
+@media screen and (max-width:768px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo {
+        margin-bottom: 1rem;
+    }
+
+    ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    li {
+        margin: 0.5rem 0;
+    }
+
 }
