--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,31 +197,75 @@ header a:active {
     .column img {
         margin-bottom: 20px;
     }
-
-}
-article {
-    padding: 2rem;
-    text-align: center;
 }
 #ike {
-    font-size: 2rem;
-    color: #ff6600;
+    text-align: center;
+    font-size: 50px;
+}
+#articles {
+    font-size: 20px;
+    text-align: center;
+    align-items: center;
+    margin: 0.5rem 0;
+    display: inline;
 }
 #embark {
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
-#article {
-    list-style-type: none;
+.testimonials {
+    display: grid;
+    height: 100%;
+    place-items: center;
+    background: lightblue;
+}
+.wrapper {
+    max-width: 1200px;
+    padding: 0 20px;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
-#article li {
-    margin-right: 1rem;
-    margin-bottom: 0.5rem;
-    padding: 0.5rem 1rem;
-    background-color: #ff6600;
-    color: #fff;
-    border-radius: 20px;
+.box {
+    background: #fff;
+    border-radius: 3px;
+    padding: 25px;
+    width: calc(33% - 10px);
+}
+.name {
+    font-size: 17px;
+    font-weight: 600;
+}
+.job {
+    color: #ff6600;
+    font-size: 16px;
+    font-weight: 500;
+}
+.tour {
+    padding-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.info {
+    margin-top: 2px;
+    color: #ff6600;
+}
+.image {
+    height: 75px;
+    width: 75px;
+    padding: 3px;
+    background: lightblue;
+    border-radius: 50%;
+}
+.photo {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #fff;
+}
+.best {
+    text-align: justify;
 }
