--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,3 +422,76 @@ input[type="submit"]:hover {
         grid-template-columns: 1fr;
     }
 }
+.feel {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #ffff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+.feel h1 {
+    font-size: 32px;
+    text-align: center;
+    color: #ff6600;
+}
+.feel p {
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+.award > div {
+    margin: 20px auto;
+    max-width: 600px;
+    text-align: center;
+}
+.award h5 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #ff6600;
+}
+.award p {
+    font-size: 16px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+.contact-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px;
+}
+.contact-table caption {
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #ff6600;
+}
+.contact-table th, .contact-table td {
+    padding: 12px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+.contact-table th {
+    background-color: #f7f7f7;
+    color: #333;
+}
+.tell form {
+    max-width: 600px;
+    margin: 20px auto;
+    text-align: center;
+}
+.feedback {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #ff6600;
+}
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    resize: vertical;
+}
+textarea:focus {
+    outline: none;
+    border-color: #ff6600;
+}
