--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,11 +244,6 @@ header a:active {
 .best {
     text-align: justify;
 }
-@media (max-width: 702px) {
-    .wrapper .box {
-        width: 100%;
-    }
-}
 footer {
     text-align: center;
     background-color: #333;
@@ -266,7 +261,7 @@ footer a {
 footer a:hover {
     text-decoration: underline;
 }
-@media screen and (max-width:768px) {
+@media (max-width:768px) {
     nav {
         flex-direction: column;
         align-items: center;
@@ -321,6 +316,9 @@ footer a:hover {
 
     article {
         padding: 1rem;
+    }
+    .wrapper {
+        grid-template-columns: 1fr;
     }
 }
 .our {
