--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,6 +266,385 @@ footer a:hover {
         flex-direction: column;
         align-items: center;
     }
+    .logo {
+        margin-bottom: 1rem;
+    }
+    ul {
+        flex-direction: column;
+        align-items: center;
+    }
+    nav li {
+        margin: 0.5rem 0;
+    }
+    .content {
+        grid-template-columns: 1fr;
+    }
+    .column img {
+        margin-bottom: 20px;
+    }
+    section .content {
+        grid-template-columns: 1fr;
+    }
+    #articles {
+        flex-direction: column;
+    }
+    header.logo {
+        font-size: 1.2rem;
+    }
+    header ul {
+        flex-direction: column;
+        align-items: center;
+    }
+    header li {
+        margin-right: 0;
+        margin-bottom: 1rem;
+    }
+    .welcome {
+        margin: 1rem 0;
+    }
+    article {
+        padding: 1rem;
+    }
+    .wrapper {
+        grid-template-columns: 1fr;
+    }
+}
+.our {
+    background-color: #fff;
+    padding: 2rem 1rem;
+    text-align: center;
+}
+.our h1 {
+    font-size: 2.5rem;
+    color: #ff6600;
+    margin-bottom: 1.5rem;
+}
+.our p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
+.our strong {
+    color: #ff6600;
+    font-size: 1.1rem;
+}
+.services {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 40px;
+    margin: 40px 0;
+}
+.service {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+.service figure {
+    margin-bottom: 20px;
+}
+
+.service img,
+.service video {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.service figcaption {
+    font-size: 20px;
+    font-weight: bold;
+    color: #ff6600;
+    margin-top: 10px;
+}
+
+.service p {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #444;
+}
+
+#additional-info {
+    margin-left: 50px;
+    resize: vertical;
+    border: 1px solid #ccc;
+    padding: 8px;
+}
+
+.contact {
+    background-color: #f1f1f1;
+    padding: 40px;
+    text-align: center;
+}
+
+.contact p {
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+section {
+    margin: 10px;
+}
+
+label {
+    display: block;
+    font-weight: bold;
+    margin: 5px;
+}
+
+select,
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="date"],
+input[type="submit"] {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+select {
+    background-color: #f9f9f9;
+}
+
+input[type="submit"] {
+    background-color: #ff6600;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+input[type="submit"]:hover {
+    background-color: #e65c00;
+}
+
+@media (max-width: 768px) {
+    .services {
+        grid-template-columns: 1fr;
+    }
+}
+
+.feel {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #ffff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
+.feel h1 {
+    font-size: 32px;
+    text-align: center;
+    color: #ff6600;
+}
+
+.feel p {
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.award>div {
+    margin: 20px auto;
+    max-width: 600px;
+    text-align: center;
+}
+
+.award h5 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #ff6600;
+}
+
+.award p {
+    font-size: 16px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.contact-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px;
+}
+
+.contact-table caption {
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #ff6600;
+}
+
+.contact-table th,
+.contact-table td {
+    padding: 12px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+.contact-table th {
+    background-color: #f7f7f7;
+    color: #333;
+}
+
+.tell form {
+    max-width: 600px;
+    margin: 20px auto;
+    text-align: center;
+}
+
+.feedback {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #ff6600;
+}
+
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    resize: vertical;
+}
+
+textarea:focus {
+    outline: none;
+    border-color: #ff6600;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
+    margin: 40px auto;
+}
+
+.item {
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.item img,
+.item video {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.item:hover .overlay {
+    opacity: 1;
+}
+
+.item p {
+    font-size: 14px;
+    text-align: center;
+}
+
+.about {
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #f7f7f7;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
+.about h1 {
+    font-size: 24px;
+    text-align: center;
+    color: #ff6600;
+    margin-bottom: 15px;
+}
+
+.about p {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 15px;
+}
+
+.about figure {
+    margin: 20px 0;
+}
+
+.about figure img {
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.about figure p {
+    font-size: 14px;
+    text-align: center;
+    color: #777;
+    margin-top: 5px;
+}
+
+.mission h2 {
+    font-size: 22px;
+    margin-bottom: 10px;
+    color: #ff6600;
+    text-align: center;
+}
+
+.mission p {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 15px;
+}
+
+.choose h2 {
+    font-size: 22px;
+    margin-bottom: 10px;
+    color: #ff6600;
+}
+
+.choose ul {
+    list-style: none;
+    padding: 0px;
+    margin: 20px;
+}
+
+.choose li {
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.choose li::before {
+    content: "\2022";
+    font-size: 14px;
+    margin-right: 5px;
+    color: #ff6600;
+}
+
+.discover h2 {
+    font-size: 22px;
+    margin-bottom: 10px;
+    color: #ff6600;
+}
+
+.discover p {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 15px;
+}
+
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+    }
 
     .logo {
         margin-bottom: 1rem;
@@ -317,284 +696,61 @@ footer a:hover {
     article {
         padding: 1rem;
     }
+
     .wrapper {
         grid-template-columns: 1fr;
     }
 }
-.our {
-    background-color: #fff;
-    padding: 2rem 1rem;
-    text-align: center;
+
+/* Testimonials Section */
+.testimonials .wrapper {
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: space-between;
 }
-.our h1 {
-    font-size: 2.5rem;
-    color: #ff6600;
-    margin-bottom: 1.5rem;
+
+.box {
+    width: calc(33.33% - 20px);
 }
-.our p {
-    font-size: 1.1rem;
-    line-height: 1.6;
+
+@media (max-width: 768px) {
+    .testimonials .wrapper {
+        justify-content: center;
+    }
+
+    .box {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
-.our strong {
-    color: #ff6600;
-    font-size: 1.1rem;
-}
-.services {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 40px;
-    margin: 40px 0;
-}
-.service {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-.service figure {
-    margin-bottom: 20px;
-}
-.service img, .service video {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-.service figcaption {
-    font-size: 20px;
-    font-weight: bold;
-    color: #ff6600;
-    margin-top: 10px;
-}
-.service p {
-    font-size: 16px;
-    line-height: 1.6;
-    color: #444;
-}
-#additional-info {
-    margin-left: 50px;
-    resize: vertical;
-    border: 1px solid #ccc;
-    padding: 8px;
-}
-.contact {
-    background-color: #f1f1f1;
-    padding: 40px;
-    text-align: center;
-}
-.contact p {
-    font-size: 18px;
-    margin-bottom: 30px;
-}
-form {
+
+/* Footer */
+footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
-section {
-    margin: 10px;
+
+footer span {
+    margin-right: 1rem;
 }
-label {
-    display: block;
-    font-weight: bold;
-    margin: 5px;
-}
-select, input[type="text"], input[type="email"], input[type="tel"], input[type="date"], input[type="submit"] {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-}
-select {
-    background-color: #f9f9f9;
-}
-input[type="submit"] {
-    background-color: #ff6600;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-input[type="submit"]:hover {
-    background-color: #e65c00;
-}
-@media (max-width: 768px) {
-    .services {
-        grid-template-columns: 1fr;
-    }
-}
-.feel {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #ffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-}
-.feel h1 {
-    font-size: 32px;
-    text-align: center;
+
+footer a {
     color: #ff6600;
+    margin: 0 0.5rem;
+    text-decoration: none;
 }
-.feel p {
-    font-size: 18px;
-    line-height: 1.6;
-    margin-bottom: 20px;
-}
-.award > div {
-    margin: 20px auto;
-    max-width: 600px;
-    text-align: center;
-}
-.award h5 {
-    font-size: 20px;
-    margin-bottom: 10px;
-    color: #ff6600;
-}
-.award p {
-    font-size: 16px;
-    line-height: 1.6;
-    margin-bottom: 20px;
-}
-.contact-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px;
-}
-.contact-table caption {
-    font-size: 20px;
-    margin-bottom: 10px;
-    color: #ff6600;
-}
-.contact-table th, .contact-table td {
-    padding: 12px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-}
-.contact-table th {
-    background-color: #f7f7f7;
-    color: #333;
-}
-.tell form {
-    max-width: 600px;
-    margin: 20px auto;
-    text-align: center;
-}
-.feedback {
-    font-size: 18px;
-    margin-bottom: 10px;
-    color: #ff6600;
-}
-textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    resize: vertical;
-}
-textarea:focus {
-    outline: none;
-    border-color: #ff6600;
-}
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 20px;
-    margin: 40px auto;
-}
-.item {
-    position: relative;
-    overflow: hidden;
-    border-radius: 8px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-}
-.item img, .item video {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-.item:hover .overlay {
-    opacity: 1;
-}
-.item p {
-    font-size: 14px;
-    text-align: center;
-}
-.about {
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #f7f7f7;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-}
-.about h1 {
+
+/* Adjust font-size for mobile devices */
+h1 {
     font-size: 24px;
-    text-align: center;
-    color: #ff6600;
-    margin-bottom: 15px;
-}
-.about p {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 15px;
-}
-.about figure {
-    margin: 20px 0;
-}
-.about figure img {
-    width: 100%;
-    border-radius: 8px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-}
-.about figure p {
-    font-size: 14px;
-    text-align: center;
-    color: #777;
-    margin-top: 5px;
-}
-.mission h2 {
-    font-size: 22px;
-    margin-bottom: 10px;
-    color: #ff6600;
-    text-align: center;
-}
-.mission p {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 15px;
 }
 
-.choose h2 {
-    font-size: 22px;
-    margin-bottom: 10px;
-    color: #ff6600;
-}
-.choose ul {
-    list-style: none;
-    padding: 0px;
-    margin: 20px;
+h2 {
+    font-size: 20px;
 }
 
-.choose li {
-    font-size: 14px;
-    margin-bottom: 10px;
-}
-.choose li::before {
-    content: "\2022";
-    font-size: 14px;
-    margin-right: 5px;
-    color: #ff6600;
-}
-.discover h2 {
-    font-size: 22px;
-    margin-bottom: 10px;
-    color: #ff6600;
-}
-.discover p {
+p {
     font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 15px;
 }
