--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -528,7 +528,8 @@ textarea:focus {
 }
 .about h1 {
     font-size: 24px;
-    text-align: center;
+   
+ text-align: center;
     color: #ff6600;
     margin-bottom: 15px;
 }
@@ -551,6 +552,14 @@ textarea:focus {
     color: #777;
     margin-top: 5px;
 }
+.mission, .discover {
+    text-align: center;
+    width: 1200px;
+    margin-left: 40px;
+    font-size: 40px;
+    line-height: 1.8;
+    font-weight: bold;
+}
 .mission h2 {
     font-size: 22px;
     margin-bottom: 10px;
@@ -566,6 +575,7 @@ textarea:focus {
     font-size: 22px;
     margin-bottom: 10px;
     color: #ff6600;
+    text-align: center;
 }
 .choose ul {
     list-style: none;
@@ -575,17 +585,16 @@ textarea:focus {
 .choose li {
     font-size: 14px;
     margin-bottom: 10px;
-}
-.choose li::before {
-    content: "\2022";
     font-size: 14px;
     margin-right: 5px;
-    color: #ff6600;
+    text-align: center;
+    padding: 10px;
 }
 .discover h2 {
     font-size: 22px;
     margin-bottom: 10px;
     color: #ff6600;
+    text-align: center;
 }
 .discover p {
     font-size: 16px;
