--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,19 +452,26 @@ input[type="submit"]:hover {
     line-height: 1.6;
     margin-bottom: 20px;
 }
+#azuka {
+    text-align: center;
+    font-weight: bold;
+}
 .contact-table {
-    width: 100%;
     border-collapse: collapse;
-    margin: 20px;
+    width: 50%;
+    margin-top: 20px;
+    text-align: center;
+    margin-left: 40px;
 }
 .contact-table caption {
-    font-size: 20px;
+    font-size: 1.2em;
+    font-weight: bold;
     margin-bottom: 10px;
     color: #ff6600;
 }
 .contact-table th,
 .contact-table td {
-    padding: 12px;
+    padding: 8px;
     text-align: center;
     border-bottom: 1px solid #ddd;
 }
@@ -481,6 +488,7 @@ input[type="submit"]:hover {
     font-size: 18px;
     margin-bottom: 10px;
     color: #ff6600;
+    text-align: center;
 }
 textarea {
     width: 100%;
@@ -554,11 +562,11 @@ textarea:focus {
 }
 .mission, .discover {
     text-align: center;
-    width: 1200px;
     margin-left: 40px;
-    font-size: 40px;
-    line-height: 1.8;
+    font-size: 60px;
+    line-height: 2;
     font-weight: bold;
+    margin-right: 40px;
 }
 .mission h2 {
     font-size: 22px;
@@ -688,4 +696,12 @@ h2 {
 }
 p {
     font-size: 16px;
+}@media only screen and (max-width: 480px) {
+    .contact-table {
+        font-size: 14px;
+        margin-top: 10px;
+    }
+    caption {
+        font-size: 1em;
+    }
 }
